Fixed layout issues for tables

--- a/web/src/features/forwards/forwards_table.module.scss
+++ b/web/src/features/forwards/forwards_table.module.scss
@@ -1,5 +1,6 @@
 .forwardsControls {
   display: flex;
+  width: 100%;
   align-items: center;
   column-gap: 8px;
   justify-content: flex-end;
