--- a/web/src/features/templates/detailsPageTemplate/details-page-template.module.scss
+++ b/web/src/features/templates/detailsPageTemplate/details-page-template.module.scss
@@ -26,11 +26,7 @@
   width: 320px;
 }
 .detailsPageContent {
-  padding-top: 12px;
   grid-area: Content;
-  @media only screen and (max-width: 700px) {
-    padding-right: 12px;
-  }
 }
 .detailsPageTitle {
   grid-area: Title;
