--- a/web/src/features/templates/templates.module.scss
+++ b/web/src/features/templates/templates.module.scss
@@ -1,21 +1,17 @@
 .pageTitleWrapper {
-  padding-top: 32px;
-  display: grid;
-  grid-auto-flow: column;
-  grid-template-columns: 50% 50%;
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  padding-top: 32px;
   align-items: end;
   @media only screen and (max-width: 900px) {
     padding-top: 16px;
   }
   @media only screen and (max-width: 700px) {
-    grid-template-columns: auto;
-    grid-auto-flow: row;
-    grid-row-gap: 4px;
+    flex-direction: column;
+    align-items: start;
     padding-top: 12px;
-    width: calc(100vw - 24px);
     padding-bottom: 8px;
-    padding-right: 12px;
   }
   .editNameButton {
     display: none;
@@ -42,9 +38,6 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  @media only screen and (max-width: 700px) {
-    width: calc(100vw - 24px);
-  }
   @media only screen and (max-width: 700px) {
     height: 32px;
     font-size: var(--font-L-regular);
@@ -81,6 +74,7 @@
 }
 .rightWrapper {
   display: flex;
+  width: 100%;
   align-items: center;
   justify-content: flex-end;
 }
